refactor: improve code homogeneity and production readiness
Backend improvements:
- Add ClaudeAPIException handler (503 Service Unavailable)
- Add RateLimitExceededException handler (429 Too Many Requests)
- Make CORS origins configurable via application.properties
- Make AI rate limits configurable (ai.requests.per-user-per-day)
- Add comprehensive logging for CORS configuration
- Update RateLimitService to use @Value injection instead of hardcoded constants
- Add @PostConstruct logging for service initialization
- Improve rate limit debug logging with quota information

Frontend improvements:
- Remove all console.log statements from analyticsUtils.ts
- Add comprehensive JSDoc documentation to utility functions
- Export TypeScript types for better type safety (AggregatedStats, TrendDirection)
- Add edge case handling (division by zero in avgProductivity)
- Include usage examples in JSDoc comments

Configuration:
- Add cors.allowed-origins property with default localhost:5173
- Support comma-separated origins for multi-environment deployment
- Maintain backward compatibility with existing setups
- Enable environment variable overrides for all configurations

These changes improve code professionalism, maintainability, and make the
application more production-ready while following Spring Boot best practices.